[gd_scene load_steps=7 format=3 uid="uid://djh6p5vpl0qh6"]

[ext_resource type="Script" path="res://Scripts/FPSController.gd" id="1_autb6"]
[ext_resource type="PackedScene" uid="uid://dowap4odm1r6i" path="res://Assets/Vape/vape Kangertech.fbx" id="2_xtpyj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0mgwr"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_405hn"]
direction = Vector3(0, 0, -1)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
linear_accel_min = -1.0
damping_min = 0.1
damping_max = 0.5
scale_max = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b67p8"]
transparency = 1
albedo_color = Color(0.8, 0.8, 0.8, 0.403922)
billboard_mode = 1
billboard_keep_scale = true
grow_amount = -2.259
proximity_fade_distance = 0.0
distance_fade_max_distance = 5.0

[sub_resource type="QuadMesh" id="QuadMesh_m8acc"]
material = SubResource("StandardMaterial3D_b67p8")
size = Vector2(0.1, 0.1)

[node name="FPSController" type="CharacterBody3D"]
script = ExtResource("1_autb6")
vapeEndPos = Vector3(0, -0.3, -0.38)
vapeEndRot = Vector3(0.8, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0mgwr")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.63274, 0)

[node name="VapePen" parent="Camera3D" instance=ExtResource("2_xtpyj")]
transform = Transform3D(0.0432072, 0, 0, 0, 0.0432072, 0, 0, 0, 0.0432072, 0.527411, -0.809914, -0.953199)

[node name="VapeLight" type="SpotLight3D" parent="Camera3D/VapePen"]
transform = Transform3D(1, 0, 0, 0, 0.410942, 0.911662, 0, -0.911662, 0.410942, 0, 0, 0)
light_color = Color(0.501961, 1, 0.87451, 1)
light_energy = 2.0
light_indirect_energy = 4.0
light_size = 0.171
shadow_enabled = true
spot_range = 100.0
spot_attenuation = 0.0
spot_angle = 60.0

[node name="Label3D" type="Label3D" parent="Camera3D/VapePen/VapeLight"]
transform = Transform3D(-0.013652, 0.0125969, -0.999828, 0.198983, 0.979956, 0.00962957, 0.979908, -0.198817, -0.0158851, -0.0327222, 0.0563962, 0.170984)
text = "100"
font_size = 10
outline_size = 2

[node name="CloudParticles" type="GPUParticles3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.274622, -0.274581)
emitting = false
amount = 50
lifetime = 5.0
one_shot = true
explosiveness = 0.8
randomness = 1.0
visibility_aabb = AABB(-4, -4, -4.15975, 8, 8, 8.3195)
process_material = SubResource("ParticleProcessMaterial_405hn")
draw_pass_1 = SubResource("QuadMesh_m8acc")
